# ai-networking

./: MIGRATION.md  PROJECT_SUMMARY.md  README.md
digit-detector/: QUICK_REFERENCE.md  README.md  setup.sh
digit-detector-cpp/: build.sh
digit-detector-cpp/configs/: config.json
digit-detector-cpp/src/: App.cpp
digit-detector/digit-detector-cpp/: .gitignore  CMakeLists.txt  README.md
digit-detector/digit-detector-cpp/include/digit_detector/: App.h  ImageProcessor.h  InferenceEngine.h  Renderer.h  types.h
digit-detector/digit-detector-cpp/src/: ImageProcessor.cpp  InferenceEngine.cpp  Renderer.cpp  main.cpp
digit-detector/digit-model-ml/: Makefile  README.md  pyproject.toml
digit-detector/digit-model-ml/configs/: default.json  example.json
digit-detector/digit-model-ml/models/: .gitkeep
digit-detector/digit-model-ml/src/digit_model/: __init__.py  benchmark.py  cli.py  eval.py  model.py  predict.py  train.py
digit-detector/digit-model-ml/tests/: test_data.py  test_model.py
digit-detector/shape-detector/: .gitignore  CMakeLists.txt  benchmark.py  config.json  digit_model.pth  eval.py  requirements.txt
digit-detector/shape-detector/src/: App.cpp  App.h  ImageProcessor.cpp  ImageProcessor.h  InferenceEngine.cpp  Renderer.h
digit-model-ml/: .gitignore  README.md  pyproject.toml
digit-model-ml/src/digit_model/: data.py  model.py
rdma/: notes.md
shape-detector/: CMakeLists.txt  benchmark.py  data.py  digit_model.pth  digit_model.ts  digit_recognizer  eval.py  main.cpp  model.py  predict.py  train.py
shape-detector/src/: App.cpp  App.h  InferenceEngine.h  Renderer.cpp  Renderer.h  types.h
